--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
+    <a href="recipes/breakfast_burrito.html">Breakfast Burrito</a>
 
 </body>
 </html>
