--- a/recipes/breakfast_burrito.html
+++ b/recipes/breakfast_burrito.html
@@ -7,7 +7,7 @@
 <p>These Easy Breakfast Burritos are just what you need for busy mornings! They're loaded with all the classic breakfast flavors your family loves in one convenient handheld meal. Not only are these Easy Breakfast Burritos quick to prep, but you can also freeze them for the perfect grab-and-go breakfast when you're really in a rush. Two minutes in the microwave is all you need to get them ready to go. Without further ado, here's how to make Easy Breakfast Burritos.</p>
 <h3>Ingedients</h3>
 <ul> 
-    <li> 3tablespoons vegetable oil</li>
+    <li> 3 tablespoons vegetable oil</li>
         <li>4 cups (12 oz) frozen shredded hash brown potatoes (from 30-oz bag)</li>
         <li>8 eggs</li>
         <li>1 can (4.5 oz) Old El Paso™ chopped green chiles</li>
@@ -17,3 +17,13 @@
        <li>1 package (11 oz) Old El Paso™ flour tortillas for burritos (8 tortillas)</li>
         <li>2 cups shredded Mexican cheese blend (8 oz)</li>
 </ul>
+<h3>Steps</h3>
+<ol> 
+
+        <li>In 12-inch nonstick skillet, heat 2 tablespoons of the oil over medium-high heat. Add frozen hash brown potatoes in even layer; press down lightly. Cook potatoes 7 minutes without moving. Drizzle with remaining 1 tablespoon oil; turn. Cook 6 to 8 minutes longer or until browned on both sides and hot throughout. Transfer to medium bowl; cover with foil to keep warm. Wipe out skillet.</li>
+        <li>In large bowl, beat eggs, green chiles, salt and pepper until well blended. In same skillet over medium-high heat, cook sausage 2 to 3 minutes, stirring frequently, until browned. Stir in egg mixture; cook 2 to 3 minutes, stirring occasionally, until scrambled.</li>
+        <li>To assemble burritos, spoon line of hash browns down center of each tortilla. Top with cheese and egg mixture.</li>
+        <li>Roll up each tortilla tightly to secure filling. Serve immediately, or freeze as directed below.
+        </li>
+
+</ol>
