--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/breakfast_burrito.html">Breakfast Burrito</a>
+    <img src="anime-cooking.gif">
+
+    <a id="burrito_link" href="recipes/breakfast_burrito.html">1. Breakfast Burrito</a>
 
 </body>
 </html>
