--- a/recipes/breakfast_burrito.html
+++ b/recipes/breakfast_burrito.html
@@ -1,12 +1,15 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="../styles.css">
+</head>
 <h1>
     Breakfast Burrito
 </h1>
 
-<img src="burrito.jpg"alt="burrito pic">
+<img id="burrito-image"src="burrito.jpg"alt="burrito pic">
 <h3>Delicious breakfast burrito made in minutes</h2>
 <p>These Easy Breakfast Burritos are just what you need for busy mornings! They're loaded with all the classic breakfast flavors your family loves in one convenient handheld meal. Not only are these Easy Breakfast Burritos quick to prep, but you can also freeze them for the perfect grab-and-go breakfast when you're really in a rush. Two minutes in the microwave is all you need to get them ready to go. Without further ado, here's how to make Easy Breakfast Burritos.</p>
 <h3>Ingedients</h3>
-<ul> 
+<ul id="ingredients"> 
     <li> 3 tablespoons vegetable oil</li>
         <li>4 cups (12 oz) frozen shredded hash brown potatoes (from 30-oz bag)</li>
         <li>8 eggs</li>
